Fixed z-index & updated qigong photo & added wild collectibles

--- a/src/components/notebook/notebookElement/NotebookElement.module.less
+++ b/src/components/notebook/notebookElement/NotebookElement.module.less
@@ -38,7 +38,6 @@
   img {
     height: 120%;
     position: relative;
-    z-index: 2;
     transform: rotate(1deg);
   }
 }
